--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ h1{font-family: 'Fjalla One', sans-serif;}
 }
         </style>
 </head>
-<body><div style="text-align:center;">
+<body><div style="margin-top:10px;color:white;text-align:center;">
           <h1>Miraculous Instrumentals</h1>
 </div>
 <div class="wrapper" id="app">
@@ -549,22 +549,8 @@ WayzzEpisodes
 </svg>
 <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-de7e2ef6bfefd24b79a3f68b414b87b8db5b08439cac3f1012092b2290c719cd.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script>
 <script id="rendered-js">
-names=["alias=,img=,src=Akumatization1.mp3", "alias=,img=,src=Akumatization2.mp3", "alias=,img=,src=Akumatization3.mp3", "alias=,img=,src=AndreGlacier.mp3", "alias=,img=,src=AnouncingTheFightMayura.mp3", "alias=,img=,src=AspikTransformation.mp3", "alias=,img=,src=BigBang.mp3", "alias=,img=,src=BunnixTransformation.mp3", "alias=,img=,src=Carapace1.mp3", "alias=,img=,src=Carapace2.mp3", "alias=,img=,src=CatNoir - Guitar.mp3", "alias=,img=,src=CatNoirTransformation1.mp3", "alias=,img=,src=CatNoirTransformation2.mp3", "alias=,img=,src=Cataclysm.mp3", "alias=,img=,src=ChristmasSaveTheButterflies.mp3", "alias=,img=,src=ElMuroQueNosSepara.mp3", "alias=,img=,src=GlaciatorMarichat.mp3", "alias=,img=,src=InTheRain.mp3", "alias=,img=,src=King Monkey.mp3", "alias=,img=,src=Ladybug Guitar v1.mp3", "alias=,img=,src=Ladybug Guitar v2.mp3", "alias=,img=,src=Ladybug Guitar v3.mp3", "alias=,img=,src=LadybugTransformationv1.mp3", "alias=,img=,src=LadybugTransformationv2.mp3", "alias=,img=,src=Loneliness.mp3", "alias=,img=,src=LouAndLenniKimMiraculousThemeEnglish.mp3", "alias=,img=,src=LouAndLenniKimMiraculousThemeFrench.mp3", "alias=,img=,src=LuckyCharm.mp3", "alias=,img=,src=LukaDeclaringLoveForMarinette.mp3", "alias=,img=,src=LukaGuitarSong.mp3", "alias=,img=,src=LukaGuitarSongUnfinished.mp3", "alias=,img=,src=MakingDoseAkumas.mp3", "alias=,img=,src=MakingDoseAkumas2.mp3", "alias=,img=,src=MarinettesRealisationAdrienLovesSomeoneElse.mp3", "alias=,img=,src=Mayura Fight.mp3", "alias=,img=,src=MayuraMusic.mp3", "alias=,img=,src=MiraculousThemeSongEnglish.mp3", "alias=,img=,src=MiraculousThemeSongFrench.mp3", "alias=,img=,src=MiraculousThemeSongGerman.mp3", "alias=,img=,src=MiraculousThemeSongInstrumental.mp3", "alias=,img=,src=MiraculousThemeSongKoreanInstrumental.mp3", "alias=,img=,src=MiraculousThemeSongKoreanInstrumental2.mp3", "alias=,img=,src=MiraculousThemeSongLatinSpanish.mp3", "alias=,img=,src=MiraculousThemeSongSpanish.mp3", "alias=,img=,src=MultimouseTransformation.mp3", "alias=,img=,src=OblivioKiss.mp3", "alias=,img=,src=OutroMusic.mp3", "alias=,img=,src=PVMusic1.mp3", "alias=,img=,src=PVMusic2.mp3", "alias=,img=,src=PegasusTransformation.mp3", "alias=,img=,src=QueenBee.mp3", "alias=,img=,src=RenaRouge1.mp3", "alias=,img=,src=RenaRouge2.mp3", "alias=,img=,src=RyukoTransformation.mp3", "alias=,img=,src=SaveTheButterflies.mp3", "alias=,img=,src=SlowDance.mp3", "alias=,img=,src=StationationEng.mp3", "alias=,img=,src=StationationFr.mp3", "alias=,img=,src=ThemeInstrumental.mp3", "alias=,img=,src=Unicorns.mp3", "alias=,img=,src=UnicornsInstrumental.mp3", "alias=,img=,src=ViperionTransformation.mp3", "alias=,img=,src=You are our everyday Ladybug.mp3"];
-var tracks=[{
-        name: "Korean opening",
-        artist: "ZAG Heroez™",
-        cover: "https://i.ytimg.com/vi/EuhCAluhJrs/maxresdefault.jpg",
-        source: "https://miraculous.ml/mlinstrumentals/wayzz/Korean%20opening%20instrumental.mp3",
-        url: "https://miraculous.ml/mlinstrumentals/wayzz/Korean%20opening%20instrumental.mp3",
-        favorited: false
-      },
-    {
-        name: "Stormy Weather akumatization music",
-        artist: "ZAG Heroez™",
-        cover: "https://vignette.wikia.nocookie.net/lady-bug/images/2/25/SW_%2818%29.png/revision/latest?cb=20181025215543",
-        source: "https://miraculous.ml/mlinstrumentals/wayzz/Stormy%20Weather%20akumatization%20music%20instrumental.mp3",
-        url: "https://miraculous.ml/mlinstrumentals/wayzz/Stormy%20Weather%20akumatization%20music%20instrumental.mp3",
-        favorited: false },
+names=["alias=Korean opening,img=https://i.ytimg.com/vi/EuhCAluhJrs/maxresdefault.jpg,src=Korean%20opening%20instrumental.mp3","alias=Stormy Weather akumatization music,img=https://vignette.wikia.nocookie.net/lady-bug/images/2/25/SW_%2818%29.png/revision/latest?cb=20181025215543,src=Stormy%20Weather%20akumatization%20music%20instrumental.mp3","alias=,img=,src=Akumatization1.mp3", "alias=,img=,src=Akumatization2.mp3", "alias=,img=,src=Akumatization3.mp3", "alias=,img=,src=AndreGlacier.mp3", "alias=,img=,src=AnouncingTheFightMayura.mp3", "alias=,img=,src=AspikTransformation.mp3", "alias=,img=,src=BigBang.mp3", "alias=,img=,src=BunnixTransformation.mp3", "alias=,img=,src=Carapace1.mp3", "alias=,img=,src=Carapace2.mp3", "alias=,img=,src=CatNoir - Guitar.mp3", "alias=,img=,src=CatNoirTransformation1.mp3", "alias=,img=,src=CatNoirTransformation2.mp3", "alias=,img=,src=Cataclysm.mp3", "alias=,img=,src=ChristmasSaveTheButterflies.mp3", "alias=,img=,src=ElMuroQueNosSepara.mp3", "alias=,img=,src=GlaciatorMarichat.mp3", "alias=,img=,src=InTheRain.mp3", "alias=,img=,src=King Monkey.mp3", "alias=,img=,src=Ladybug Guitar v1.mp3", "alias=,img=,src=Ladybug Guitar v2.mp3", "alias=,img=,src=Ladybug Guitar v3.mp3", "alias=,img=,src=LadybugTransformationv1.mp3", "alias=,img=,src=LadybugTransformationv2.mp3", "alias=,img=,src=Loneliness.mp3", "alias=,img=,src=LouAndLenniKimMiraculousThemeEnglish.mp3", "alias=,img=,src=LouAndLenniKimMiraculousThemeFrench.mp3", "alias=,img=,src=LuckyCharm.mp3", "alias=,img=,src=LukaDeclaringLoveForMarinette.mp3", "alias=,img=,src=LukaGuitarSong.mp3", "alias=,img=,src=LukaGuitarSongUnfinished.mp3", "alias=,img=,src=MakingDoseAkumas.mp3", "alias=,img=,src=MakingDoseAkumas2.mp3", "alias=,img=,src=MarinettesRealisationAdrienLovesSomeoneElse.mp3", "alias=,img=,src=Mayura Fight.mp3", "alias=,img=,src=MayuraMusic.mp3", "alias=,img=,src=MiraculousThemeSongEnglish.mp3", "alias=,img=,src=MiraculousThemeSongFrench.mp3", "alias=,img=,src=MiraculousThemeSongGerman.mp3", "alias=,img=,src=MiraculousThemeSongInstrumental.mp3", "alias=,img=,src=MiraculousThemeSongKoreanInstrumental.mp3", "alias=,img=,src=MiraculousThemeSongKoreanInstrumental2.mp3", "alias=,img=,src=MiraculousThemeSongLatinSpanish.mp3", "alias=,img=,src=MiraculousThemeSongSpanish.mp3", "alias=,img=,src=MultimouseTransformation.mp3", "alias=,img=,src=OblivioKiss.mp3", "alias=,img=,src=OutroMusic.mp3", "alias=,img=,src=PVMusic1.mp3", "alias=,img=,src=PVMusic2.mp3", "alias=,img=,src=PegasusTransformation.mp3", "alias=,img=,src=QueenBee.mp3", "alias=,img=,src=RenaRouge1.mp3", "alias=,img=,src=RenaRouge2.mp3", "alias=,img=,src=RyukoTransformation.mp3", "alias=,img=,src=SaveTheButterflies.mp3", "alias=,img=,src=SlowDance.mp3", "alias=,img=,src=StationationEng.mp3", "alias=,img=,src=StationationFr.mp3", "alias=,img=,src=ThemeInstrumental.mp3", "alias=,img=,src=Unicorns.mp3", "alias=,img=,src=UnicornsInstrumental.mp3", "alias=,img=,src=ViperionTransformation.mp3", "alias=,img=,src=You are our everyday Ladybug.mp3"];
+/*var tracks=[
     {
         name:"Adrienette Dance",
         artist:"ZAG Heroez™",
@@ -575,14 +561,14 @@ var tracks=[{
      {
         name:"Adrienette Kiss Puppeteer 2",
         artist:"ZAG Heroez™",
-        cover:"https://vignette.wikia.nocookie.net/lady-bug/images/a/a4/The_Puppeteer_2_-_Infobox_Image.png/revision/latest?cb=20190802130038",
+        cover:"https://miraculous.ml/img/b21.jpg",
         source:"https://miraculous.ml/mlinstrumentals/wayzz/Adrienette%20kiss%20scene%20Puppeteer2%20instrumental.mp3",
         url:"https://miraculous.ml/mlinstrumentals/wayzz/Adrienette%20kiss%20scene%20Puppeteer2%20instrumental.mp3",
         favorited:false},
      {
         name:"Bread tasting scene",
         artist:"ZAG Heroez™",
-        cover:"https://i.ytimg.com/vi/ZfD2_-gtVPo/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAvSEaVpDKqFaTC57zChTWivXaotw",
+        cover:"https://miraculous.ml/img/b3.png",
         source:"https://miraculous.ml/mlinstrumentals/wayzz/Bread%20tasting%20scene%20instrumental.mp3",
         url:"https://miraculous.ml/mlinstrumentals/wayzz/Bread%20tasting%20scene%20instrumental.mp3",
         favorited:false},
@@ -634,15 +620,25 @@ var tracks=[{
         cover: "https://i.ytimg.com/vi/TEdt_zAcWrU/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLCVKbD8nNDapvx2vxeDefh8CZD-OQ",
         source: "https://miraculous.ml/mlinstrumentals/wayzz/Master%20Fu's%20S2%20first%20visit%20scene%20instrumental.mp3",
         url: "https://miraculous.ml/mlinstrumentals/wayzz/Master%20Fu's%20S2%20first%20visit%20scene%20instrumental.mp3",
-        favorited: false }];
+        favorited: false }];*/
+        var tracks=[];
     for(var i=0;i<names.length;i++){try{
+        if(i<2){
         tracks.push({
             name:(names[i].split(",")[0].split("=")[1]!=""?names[i].split(",")[0].split("=")[1]:names[i].split(",")[2].split("=")[1].replace(".mp3","")),
             artist: "ZAG Heroez™",
-            cover: (names[i].split(",")[0].split("=")[1]!=""?names[i].split(",")[0].split("=")[1]:"https://image.freepik.com/free-vector/coming-soon-message-illuminated-with-light-projector_1284-3622.jpg"),
-            source: "https://miraculous.ml/MusicRepo/NewInstrumentalsforWeb/"+names[i].split(",")[2].split("=")[1],
-            url: "https://miraculous.ml/MusicRepo/NewInstrumentalsforWeb/"+names[i].split(",")[2].split("=")[1]
-        });}catch(err){alert(err.stack+" "+names[i])}
+            cover: (names[i].split(",")[1].split("=")[1]!=""?names[i].split(",")[1].split("=")[1]:"https://image.freepik.com/free-vector/coming-soon-message-illuminated-with-light-projector_1284-3622.jpg"),
+            source: "https://miraculous.ml/mlinstrumentals/wayzz/"+names[i].split(",")[2].split("=")[1],
+            url: "http://ouo.io/qs/ZLAhaHek?s=https://miraculous.ml/mlinstrumentals/wayzz/"+names[i].split(",")[2].split("=")[1]
+        });}else{
+            tracks.push({
+                name:(names[i].split(",")[0].split("=")[1]!=""?names[i].split(",")[0].split("=")[1]:names[i].split(",")[2].split("=")[1].replace(".mp3","")),
+                artist: "ZAG Heroez™",
+                cover: (names[i].split(",")[1].split("=")[1]!=""?names[i].split(",")[1].split("=")[1]:"https://image.freepik.com/free-vector/coming-soon-message-illuminated-with-light-projector_1284-3622.jpg"),
+                source: "https://miraculous.ml/MusicRepo/NewInstrumentalsforWeb/"+names[i].split(",")[2].split("=")[1],
+                url: "http://ouo.io/qs/ZLAhaHek?s=https://miraculous.ml/MusicRepo/NewInstrumentalsforWeb/"+names[i].split(",")[2].split("=")[1]
+            });
+        }}catch(err){alert(err.stack+" "+names[i])}
     }
 
 
