--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@ names=["alias=Korean opening,img=https://i.ytimg.com/vi/EuhCAluhJrs/maxresdefaul
                 artist: "ZAG Heroez™",
                 cover: (names[i].split(",")[1].split("=")[1]!=""?names[i].split(",")[1].split("=")[1]:"https://image.freepik.com/free-vector/coming-soon-message-illuminated-with-light-projector_1284-3622.jpg"),
                 source: "https://miraculous.ml/MusicRepo/NewInstrumentalsforWeb/"+names[i].split(",")[2].split("=")[1],
-                url: "http://ouo.io/qs/ZLAhaHek?s=https://miraculous.ml/MusicRepo/NewInstrumentalsforWeb/"+names[i].split(",")[2].split("=")[1]
+                url: /*"http://ouo.io/qs/ZLAhaHek?s="*/"https://miraculous.ml/MusicRepo/NewInstrumentalsforWeb/"+names[i].split(",")[2].split("=")[1]
             });
         }}catch(err){alert(err.stack+" "+names[i])}
     }
