--- a/index.html
+++ b/index.html
@@ -495,9 +495,9 @@ h1{font-family: 'Fjalla One', sans-serif;}
 </div>
 <div v-cloak></div>
 </div>
-<a href="https://miraculous.ml" target="_blank" class="github-btn">
+<!--<a href="https://miraculous.ml" target="_blank" class="github-btn">
 WayzzEpisodes
-</a>
+</a>-->
 </div>
 <svg xmlns="http://www.w3.org/2000/svg" hidden xmlns:xlink="http://www.w3.org/1999/xlink">
 <defs>
