--- a/index.html
+++ b/index.html
@@ -442,9 +442,9 @@ h1{font-family: 'Fjalla One', sans-serif;}
           }
         </style>
 </head>
-<body><div style="margin-top:10px;color:white;text-align:center;">
+<body><!--<div style="margin-top:10px;color:white;text-align:center;">
           <h1>Miraculous Instrumentals</h1>
-</div>
+</div>-->
 <div class="wrapper" id="app">
 <div class="player">
 <div class="player__top">
