--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ h1{font-family: 'Fjalla One', sans-serif;}
 </div>
 <div v-cloak></div>
 </div>
-<!--<a href="https://miraculous.ml" target="_blank" class="github-btn">
+<!--<a href="https://miraculousladybug.org" target="_blank" class="github-btn">
 WayzzEpisodes
 </a>-->
 </div>
@@ -556,71 +556,71 @@ names=["alias=Korean opening,img=https://i.ytimg.com/vi/EuhCAluhJrs/maxresdefaul
         name:"Adrienette Dance",
         artist:"ZAG Heroez™",
         cover:"https://i.pinimg.com/originals/6b/5e/d9/6b5ed98734474ff146b7578649fb54db.png",
-        source:"https://miraculous.ml/mlinstrumentals/wayzz/Adrienette%20dance%20instrumental.mp3",
-        url:"https://miraculous.ml/mlinstrumentals/wayzz/Adrienette%20dance%20instrumental.mp3",
+        source:"https://miraculousladybug.org/mlinstrumentals/wayzz/Adrienette%20dance%20instrumental.mp3",
+        url:"https://miraculousladybug.org/mlinstrumentals/wayzz/Adrienette%20dance%20instrumental.mp3",
         favorited:false},
      {
         name:"Adrienette Kiss Puppeteer 2",
         artist:"ZAG Heroez™",
-        cover:"https://miraculous.ml/img/b21.jpg",
-        source:"https://miraculous.ml/mlinstrumentals/wayzz/Adrienette%20kiss%20scene%20Puppeteer2%20instrumental.mp3",
-        url:"https://miraculous.ml/mlinstrumentals/wayzz/Adrienette%20kiss%20scene%20Puppeteer2%20instrumental.mp3",
+        cover:"https://miraculousladybug.org/img/b21.jpg",
+        source:"https://miraculousladybug.org/mlinstrumentals/wayzz/Adrienette%20kiss%20scene%20Puppeteer2%20instrumental.mp3",
+        url:"https://miraculousladybug.org/mlinstrumentals/wayzz/Adrienette%20kiss%20scene%20Puppeteer2%20instrumental.mp3",
         favorited:false},
      {
         name:"Bread tasting scene",
         artist:"ZAG Heroez™",
-        cover:"https://miraculous.ml/img/b3.png",
-        source:"https://miraculous.ml/mlinstrumentals/wayzz/Bread%20tasting%20scene%20instrumental.mp3",
-        url:"https://miraculous.ml/mlinstrumentals/wayzz/Bread%20tasting%20scene%20instrumental.mp3",
+        cover:"https://miraculousladybug.org/img/b3.png",
+        source:"https://miraculousladybug.org/mlinstrumentals/wayzz/Bread%20tasting%20scene%20instrumental.mp3",
+        url:"https://miraculousladybug.org/mlinstrumentals/wayzz/Bread%20tasting%20scene%20instrumental.mp3",
         favorited:false},
      {
         name:"Chloe rates macaroons",
         artist:"ZAG Heroez™",
         cover:"https://i.ytimg.com/vi/TDcqBzNR19U/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLDgK-YEPQ2D1X9EPFPmHpO0R_FUTw",
-        source:"https://miraculous.ml/mlinstrumentals/wayzz/Chloe%20rates%20macaroons%20scene%20instrumental.mp3",
-        url:"https://miraculous.ml/mlinstrumentals/wayzz/Chloe%20rates%20macaroons%20scene%20instrumental.mp3",
+        source:"https://miraculousladybug.org/mlinstrumentals/wayzz/Chloe%20rates%20macaroons%20scene%20instrumental.mp3",
+        url:"https://miraculousladybug.org/mlinstrumentals/wayzz/Chloe%20rates%20macaroons%20scene%20instrumental.mp3",
         favorited:false},
      {
         name:"Animaestro Fight",
         artist:"ZAG Heroez™",
         cover:"https://i.ytimg.com/vi/MmZS4HmfWq0/maxresdefault.jpg",
-        source:"https://miraculous.ml/mlinstrumentals/wayzz/Fighting%20with%20Animaestro%20scene%20instrumental.mp3",
-        url:"https://miraculous.ml/mlinstrumentals/wayzz/Fighting%20with%20Animaestro%20scene%20instrumental.mp3",
+        source:"https://miraculousladybug.org/mlinstrumentals/wayzz/Fighting%20with%20Animaestro%20scene%20instrumental.mp3",
+        url:"https://miraculousladybug.org/mlinstrumentals/wayzz/Fighting%20with%20Animaestro%20scene%20instrumental.mp3",
         favorited:false},
      {
         name:"Gigantigan Fight from Weredad",
         artist:"ZAG Heroez™",
         cover:"https://i.ytimg.com/vi/GXvl7FSGQwc/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLDfwmWlpSGOA6yN47nBSgpeYBwIPQ",
-        source:"https://miraculous.ml/mlinstrumentals/wayzz/Fighting%20with%20Gigantitan%20scene%20instrumental%20[Weredad].mp3",
-        url:"https://miraculous.ml/mlinstrumentals/wayzz/Fighting%20with%20Gigantitan%20scene%20instrumental%20[Weredad].mp3",
+        source:"https://miraculousladybug.org/mlinstrumentals/wayzz/Fighting%20with%20Gigantitan%20scene%20instrumental%20[Weredad].mp3",
+        url:"https://miraculousladybug.org/mlinstrumentals/wayzz/Fighting%20with%20Gigantitan%20scene%20instrumental%20[Weredad].mp3",
         favorited:false},
      {
         name:"Dark Cupid Fight",
         artist:"ZAG Heroez™",
         cover:"https://i.ytimg.com/vi/ChVxaD40dwk/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLCf_lHdeLx-2E7r-6oKwPO2JB-Wow",
-        source:"https://miraculous.ml/mlinstrumentals/wayzz/Fighting%20with%20Dark%20Cupid%20instrumental.mp3",
-        url:"https://miraculous.ml/mlinstrumentals/wayzz/Fighting%20with%20Dark%20Cupid%20instrumental.mp3",
+        source:"https://miraculousladybug.org/mlinstrumentals/wayzz/Fighting%20with%20Dark%20Cupid%20instrumental.mp3",
+        url:"https://miraculousladybug.org/mlinstrumentals/wayzz/Fighting%20with%20Dark%20Cupid%20instrumental.mp3",
         favorited:false},
      {
         name:"Collector Fight",
         artist:"ZAG Heroez™",
         cover:"https://pm1.narvii.com/6975/2e5ff164f09782c734347880d38b840bc3deb290r1-640-346v2_hq.jpg",
-        source:"https://miraculous.ml/mlinstrumentals/wayzz/Fighting%20with%20Collector%20scene%20instrumental.mp3",
-        url:"https://miraculous.ml/mlinstrumentals/wayzz/Fighting%20with%20Collector%20scene%20instrumental.mp3",
+        source:"https://miraculousladybug.org/mlinstrumentals/wayzz/Fighting%20with%20Collector%20scene%20instrumental.mp3",
+        url:"https://miraculousladybug.org/mlinstrumentals/wayzz/Fighting%20with%20Collector%20scene%20instrumental.mp3",
         favorited:false},
     {
         name: "Kitty Section song :)",
         artist: "ZAG Heroez™",
         cover: "https://i.ytimg.com/vi/aBZYtSxigFU/maxresdefault.jpg",
-        source: "https://miraculous.ml/mlinstrumentals/wayzz/%C2%ABKitty%20Section%C2%BB%20instrumental.mp3",
-        url: "https://miraculous.ml/mlinstrumentals/wayzz/%C2%ABKitty%20Section%C2%BB%20instrumental.mp3",
+        source: "https://miraculousladybug.org/mlinstrumentals/wayzz/%C2%ABKitty%20Section%C2%BB%20instrumental.mp3",
+        url: "https://miraculousladybug.org/mlinstrumentals/wayzz/%C2%ABKitty%20Section%C2%BB%20instrumental.mp3",
         favorited: false },
     {
         name: "Master Fu's S2 first visit",
         artist: "ZAG Heroez™",
         cover: "https://i.ytimg.com/vi/TEdt_zAcWrU/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLCVKbD8nNDapvx2vxeDefh8CZD-OQ",
-        source: "https://miraculous.ml/mlinstrumentals/wayzz/Master%20Fu's%20S2%20first%20visit%20scene%20instrumental.mp3",
-        url: "https://miraculous.ml/mlinstrumentals/wayzz/Master%20Fu's%20S2%20first%20visit%20scene%20instrumental.mp3",
+        source: "https://miraculousladybug.org/mlinstrumentals/wayzz/Master%20Fu's%20S2%20first%20visit%20scene%20instrumental.mp3",
+        url: "https://miraculousladybug.org/mlinstrumentals/wayzz/Master%20Fu's%20S2%20first%20visit%20scene%20instrumental.mp3",
         favorited: false }];*/
         var tracks=[];
     for(var i=0;i<names.length;i++){try{
@@ -629,15 +629,15 @@ names=["alias=Korean opening,img=https://i.ytimg.com/vi/EuhCAluhJrs/maxresdefaul
             name:(names[i].split(",")[0].split("=")[1]!=""?names[i].split(",")[0].split("=")[1]:names[i].split(",")[2].split("=")[1].replace(".mp3","")),
             artist: "ZAG Heroez™",
             cover: (names[i].split(",")[1].split("=")[1]!=""?names[i].split(",")[1].split("=")[1]:"https://image.freepik.com/free-vector/coming-soon-message-illuminated-with-light-projector_1284-3622.jpg"),
-            source: "https://miraculous.ml/mlinstrumentals/wayzz/"+names[i].split(",")[2].split("=")[1],
-            url: /*"http://ouo.io/qs/ZLAhaHek?s="*/"https://miraculous.ml/mlinstrumentals/wayzz/"+names[i].split(",")[2].split("=")[1]
+            source: "https://miraculousladybug.org/mlinstrumentals/wayzz/"+names[i].split(",")[2].split("=")[1],
+            url: /*"http://ouo.io/qs/ZLAhaHek?s="*/"https://miraculousladybug.org/mlinstrumentals/wayzz/"+names[i].split(",")[2].split("=")[1]
         });}else{
             tracks.push({
                 name:(names[i].split(",")[0].split("=")[1]!=""?names[i].split(",")[0].split("=")[1]:names[i].split(",")[2].split("=")[1].replace(".mp3","")),
                 artist: "ZAG Heroez™",
                 cover: (names[i].split(",")[1].split("=")[1]!=""?names[i].split(",")[1].split("=")[1]:"https://image.freepik.com/free-vector/coming-soon-message-illuminated-with-light-projector_1284-3622.jpg"),
-                source: "https://miraculous.ml/MusicRepo/NewInstrumentalsforWeb/"+names[i].split(",")[2].split("=")[1],
-                url: /*"http://ouo.io/qs/ZLAhaHek?s="*/"https://miraculous.ml/MusicRepo/NewInstrumentalsforWeb/"+names[i].split(",")[2].split("=")[1]
+                source: "https://miraculousladybug.org/MusicRepo/NewInstrumentalsforWeb/"+names[i].split(",")[2].split("=")[1],
+                url: /*"http://ouo.io/qs/ZLAhaHek?s="*/"https://miraculousladybug.org/MusicRepo/NewInstrumentalsforWeb/"+names[i].split(",")[2].split("=")[1]
             });
         }}catch(err){alert(err.stack+" "+names[i])}
     }
